2008-10-31  Jaroslav Hajek  <highegg@gmail.com>

	* oct-norm.h: New header file.
	* oct-norm.cc: New source.
	* CSparse.cc (SparseComplexMatrix::row, SparseComplexMatrix::column):
	New member functions.
	* CSparse.h (SparseComplexMatrix): Declare them.
	* dSparse.cc (SparseMatrix::row, SparseMatrix::column):
	New member functions.
	* dSparse.h (SparseMatrix): Declare them.
	* MArray-C.cc (MArray<Complex>::norm), 
	MArray-d.cc (MArray<double>::norm), 
	MArray-fC.cc (MArray<FloatComplex>::norm), 
	MArray-f.cc (MArray<float>::norm): Wrap a call to xnorm. 

	* MArray-defs.h (MARRAY_NORM_BODY): Remove.

2008-11-02  Jaroslav Hajek <highegg@gmail.com>

	* idx-vector.cc (idx_vector::is_complement): Set resulting extent
	correctly.
	* Array.cc (Array<T>::delete_elements (int, const idx_vector&)):
	Fix check for invalid dim.

2008-10-31  Jaroslav Hajek  <highegg@gmail.com>

	* idx-vector.h (idx_vector::idx_range_rep::extent): Don't change
	extent when len is zero.
	* idx-vector.h (idx_vector::idx_range_rep::idx_range_rep (void)):
	Create empty range by default.

2008-10-30  Jaroslav Hajek <highegg@gmail.com>

	* oct-inttypes.h (octave_int_abs): New function.
	(octave_int_arith_base<T, true>::div): Use octave_int_abs instead of
	std::abs.
	* oct-inttypes.cc (octave_int_arith_base<int64_t, true>): Dtto.

2008-10-28  Jaroslav Hajek <highegg@gmail.com>

	* Array-C.cc Array-d.cc Array-f.cc Array-fC.cc Array-i.cc Array-s.cc:
	Don't use semicolon after INSTANTIATE_ARRAY_ASSIGN.
	* Array-util.h (zero_dims_inquire): New declarations.
	(is_in, how_many_lgt, short_freeze): Remove declarations.
	* Array-util.cc (zero_dims_inquire): New functions.
	(is_in, how_many_lgt, short_freeze): Remove functions.
	* Array.cc (Array<T>::index, Array<T>::resize_fill, Array<T>::resize,
	Array<T>::assign, Array<T>::delete_elements):
	Rewrite.
	* Array.h (Array<T>::index, Array<T>::resize_fill, Array<T>::resize,
	Array<T>::assign, Array<T>::delete_elements):
	Rewrite interfaces.